banner-secction-added

--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
     <header class="banner-section">
         <div class="banner-container">
             <div class="banner-sections-images">
-                <img src="./assets/Group 3.png" alt="">
+                <img src="./assets/Group.png" alt="">
             </div>
             <div class="banner-conntent">
-                <h2>"In the near future, I hope to become a Developer."</h2>
-                <p>Sometime in the near future I hope to become a developer,  I hope it continues to grow and develop.
+                <h2 class="banner-text">"In the near future, I hope to become a Developer."</h2>
+                <p class="banner-description">Sometime in the near future I hope to become a developer,  I hope it continues <br> to grow and develop.
                 </p>
-                <button>Connact Me</button>
-            
-
-        
+                <button class="button-styles">Connact Me</button>
         </div>
 
     </header>
