frist-section-added

--- a/index.html
+++ b/index.html
@@ -22,9 +22,19 @@
                 </p>
                 <button class="button-styles">Connact Me</button>
         </div>
-
     </header>
-    <main></main>
+    <main>
+        <section class="frist-section">
+            <div class="section-container">
+                <div class="sections-content">
+                    <h3>Why Web Development??</h3>
+                    <p>Web development combines both technical and creative skills, allowing you to build visually appealing and functional websites.There is a vast amount of resources and communities available to support learning and professional growth in web development.</p>
+                </div>
+
+            </div>
+
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
