frist-section-allmost-done

--- a/index.html
+++ b/index.html
@@ -25,14 +25,53 @@
     </header>
     <main>
         <section class="frist-section">
-            <div class="section-container">
-                <div class="sections-content">
-                    <h3>Why Web Development??</h3>
-                    <p>Web development combines both technical and creative skills, allowing you to build visually appealing and functional websites.There is a vast amount of resources and communities available to support learning and professional growth in web development.</p>
+            <div class="frist-section-container">
+                <div class="sections-frist-content">
+                    <h3 class="frist-section-titile">Why Web Development??</h3>
+                    <p class="frist-section-description">Web development combines both technical and creative skills, allowing you to build visually appealing and functional websites.There is a vast amount of resources and communities available to support learning and professional growth in web development.</p>
+                </div> 
+                <div class="frist-sections-second-contain">
+                    <div class="frist-sections-second-containers">
+                        <div class="frist-sections-second-content">
+                            <h3 class="frist-section-second-title">I will Do Coding and Change The World</h3>
+                            <p class="frist-section-second-subtitle">Keep learning new technologies and stay updated with industry trends. This helps you adapt and innovate as you work towards making a broader impact.</p>
+                            <button class="second-button-styles"><u>Learn More</u></button>
+                        </div>
+                        <div class="images-frist-section">
+                            <img class="images-frist" src="./assets/Layer_1.png" alt="">
+                        </div>
+                    </div>
                 </div>
-
+                <!-- second-blogs -->
+                <div class="frist-sections-third-contain">
+                    <div class="frist-sections-third-containers">
+                        <div class="second-images-frist-section">
+                            <img class="images-frist" src="./assets/Group 3.png" alt="">
+                        </div>
+                        <div class="frist-sections-second-content">
+                            <h3 class="frist-section-second-title">I will help People by creating Modern Web System</h3>
+                            <p class="frist-section-second-subtitle">elect appropriate technologies and frameworks based on the requirements of your project. For example, React or Vue.js for frontend development, Node.js or Django for backend services.</p>
+                            <button class="second-button-styles"><u>Learn More</u></button>
+                        </div>
+                        
+                    </div>
+                </div>
+                <!-- Third-blogs -->
+                <div class="frist-sections-second-contain">
+                    <div class="frist-sections-second-containers">
+                        <div class="frist-sections-second-content">
+                            <h3 class="frist-section-second-title">I will Do Coding and Change The World</h3>
+                            <p class="frist-section-second-subtitle">
+                                Depending on your chosen cause, learn programming languages and tools that are most relevant. For example, Python or R for data science, JavaScript for web development, or Java/Kotlin for Android app development.</p>
+                            <button class="second-button-styles"><u>Learn More</u></button>
+                        </div>
+                        <div class="images-frist-section">
+                            <img class="images-frist" src="./assets/Group 4.png" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
-
+            
         </section>
     </main>
     <footer></footer>
