fourth-section-styles-added

--- a/index.html
+++ b/index.html
@@ -127,20 +127,45 @@
                 <h1 class="fourth-section-title">My Next Target</h1>
                 <p class="fourth-section-description">a specific project, learn a new technology, or improve your skills in a certain area <br> Let me know how I can assist you in reaching your goal!</p>
             </div>
-            <div class="fourth-sections-blogs">
+            <div class="fourth-sections-blogs margin-top">
                 <div class="fourth-section-content">
                     <div class="fourth-section-imges">
                         <img class="react-js" src="./assets/react.png" alt="">
                     </div>
                     <div class="fourth-text-section">
-                        <h1>React Js</h1>
-                        <p>React.js is a powerful and popular library for building user interfaces, particularly for single-page applications. Here’s a roadmap to help you get started and advance your skills in Reac
+                        <h1 class="rect">React Js</h1>
+                        <p class="react-description"> React.js is a powerful and popular library for building user interfaces, particularly for single-page applications. Here’s a roadmap to help you get started and advance your skills in Reac
                         </p>
-                        <h3 class=""><u>Learn More</u></h3>
+                        <h3 class="fourth-button"><u>Learn More</u></h3>
                     </div>
-                </div>
+                </div> 
             </div>
-
+            <div class="fourth-sections-blogs common-styles">
+                <div class="fourth-section-content">
+                    <div class="fourth-section-imges">
+                        <img class="nodejs" src="./assets/nodejs.png" alt="">
+                    </div>
+                    <div class="fourth-text-section">
+                        <h1 class="rect">React Js</h1>
+                        <p class="react-description"> React.js is a powerful and popular library for building user interfaces, particularly for single-page applications. Here’s a roadmap to help you get started and advance your skills in Reac
+                        </p>
+                        <h3 class="fourth-button"><u>Learn More</u></h3>
+                    </div>
+                </div> 
+            </div>
+            <div class="fourth-sections-blogs common-styles">
+                <div class="fourth-section-content">
+                    <div class="fourth-section-imges">
+                        <img class="mongo" src="./assets/mongodb.png" alt="">
+                    </div>
+                    <div class="fourth-text-section">
+                        <h1 class="rect">React Js</h1>
+                        <p class="react-description"> React.js is a powerful and popular library for building user interfaces, particularly for single-page applications. Here’s a roadmap to help you get started and advance your skills in Reac
+                        </p>
+                        <h3 class="fourth-button"><u>Learn More</u></h3>
+                    </div>
+                </div> 
+            </div>
         </section>
           
     </main>
