--- a/index.html
+++ b/index.html
@@ -164,11 +164,35 @@
                         </p>
                         <h3 class="fourth-button"><u>Learn More</u></h3>
                     </div>
-                </div> 
+                </div>
+        </section>
+        <section class="last-banner-section">
+            <div class="last-banner-container">
+                <div class="last-banner-contain">
+                    <h3 class="banner-title">I need Support</h3>
+                    <p class="banner-subtitle">Learn and master programming to open a new career opportunity.
+                    </p>
+
+                </div>
+                <div class="last-banner-button">
+                    <input class="input-type" type="email" placeholder="suggest me any for feefback me"   name="" id="">
+                    <button class="last-btn">Submit </button>
+                </div>
             </div>
         </section>
-          
     </main>
-    <footer></footer>
+    <footer class="footer-section">
+        <div class="footer-container">
+            <div class="footer-text">
+                <h3>An Open Commitment by Meghla Biswas</h3>
+
+            </div>
+            <div class="footer-icon">
+                <a href=""><img  src="./assets/facebook.png"  alt=""></a>
+
+            </div>
+        </div>
+
+    </footer>
 </body>
 </html>
