--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <!-- <nav>
+    <nav>
         <h3>Meghla Biswas</h3>
         <button>Download resume</button>
-    </nav> -->
+    </nav> 
     <header class="banner-section">
         <div class="banner-container">
             <div class="banner-sections-images">
@@ -188,7 +188,9 @@
 
             </div>
             <div class="footer-icon">
-                <a href=""><img  src="./assets/facebook.png"  alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="./assets/facebook.png"  alt=""></a> 
+                <a href=" https://github.com/" target="_blank"><img src="./assets/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
 
             </div>
         </div>
