the project finally compelate

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <h3 class="frist-section-titile">Why Web Development??</h3>
                     <p class="frist-section-description">Web development combines both technical and creative skills, allowing you to build visually appealing and functional websites.There is a vast amount of resources and communities available to support learning and professional growth in web development.</p>
                 </div> 
+                <!-- frist blog -->
                 <div class="frist-sections-second-contain">
                     <div class="frist-sections-second-containers">
                         <div class="frist-sections-second-content">
@@ -149,7 +150,7 @@
                         <img class="nodejs" src="./assets/nodejs.png" alt="">
                     </div>
                     <div class="fourth-text-section">
-                        <h1 class="rect">React Js</h1>
+                        <h1 class="rect">Node Js</h1>
                         <p class="react-description"> React.js is a powerful and popular library for building user interfaces, particularly for single-page applications. Here’s a roadmap to help you get started and advance your skills in Reac
                         </p>
                         <h3 class="fourth-button"><u>Learn More</u></h3>
@@ -162,7 +163,7 @@
                         <img class="mongo" src="./assets/mongodb.png" alt="">
                     </div>
                     <div class="fourth-text-section">
-                        <h1 class="rect">React Js</h1>
+                        <h1 class="rect">MongoDB</h1>
                         <p class="react-description"> React.js is a powerful and popular library for building user interfaces, particularly for single-page applications. Here’s a roadmap to help you get started and advance your skills in Reac
                         </p>
                         <h3 class="fourth-button"><u>Learn More</u></h3>
