--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <img src="./assets/html.png" alt="">
                         <h2 class="HTML-TEXT">HTML</h2>
                         <p class="html-subtitle">HyperText Markup Language is the standard markup language for documents designed to be displayed in a web browser.</p>
-                        <h3 class="larn-More"><u>Learn More</u></h3>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><h3 class="larn-More"><u>Learn More</u></h3></a>
                     </div>
                     
 
@@ -109,16 +109,16 @@
                         <img src="./assets/css.png" alt="">
                         <h2 class="CSS-TEXT">CSS</h2>
                         <p class="css-subtitle">Cascading Style Sheets is a style sheet language used for specifying the presentation .</p>
-                        <h3 class="larn-More"><u>Learn More</u></h3>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS"><h3 class="larn-More"><u>Learn More</u></h3></a>
                         </div>
 
                 </div>
                 <div class="Js_blogs">
                     <div class="js-title">
-                        <img src="./assets/css.png" alt="">
-                        <h2 class="JS-TEXT">CSS</h2>
-                        <p class="js-subtitle">Cascading Style Sheets is a style sheet language used for specifying the presentation .</p>
-                        <h3 class="larn-More"><u>Learn More</u></h3>
+                        <img src="./assets/js.png" alt="">
+                        <h2 class="JS-TEXT">JavaScript</h2>
+                        <p class="js-subtitle"> javaScript (JS) is a lightweight interpreted (or just-in-time compiled) programming language.</p>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><h3 class="larn-More"><u>Learn More</u></h3></a>
                     </div>
                 
 
@@ -140,7 +140,7 @@
                         <h1 class="rect">React Js</h1>
                         <p class="react-description"> React.js is a powerful and popular library for building user interfaces, particularly for single-page applications. Here’s a roadmap to help you get started and advance your skills in Reac
                         </p>
-                        <h3 class="fourth-button"><u>Learn More</u></h3>
+                        <a href="https://react.dev/"><h3 class="fourth-button"><u>Learn More</u></h3></a>
                     </div>
                 </div> 
             </div>
@@ -153,7 +153,7 @@
                         <h1 class="rect">Node Js</h1>
                         <p class="react-description"> React.js is a powerful and popular library for building user interfaces, particularly for single-page applications. Here’s a roadmap to help you get started and advance your skills in Reac
                         </p>
-                        <h3 class="fourth-button"><u>Learn More</u></h3>
+                        <a href="https://nodejs.org/en"><h3 class="fourth-button"><u>Learn More</u></h3></a>
                     </div>
                 </div> 
             </div>
@@ -166,7 +166,7 @@
                         <h1 class="rect">MongoDB</h1>
                         <p class="react-description"> React.js is a powerful and popular library for building user interfaces, particularly for single-page applications. Here’s a roadmap to help you get started and advance your skills in Reac
                         </p>
-                        <h3 class="fourth-button"><u>Learn More</u></h3>
+                        <a href="https://www.mongodb.com/"><h3 class="fourth-button"><u>Learn More</u></h3></a>
                     </div>
                 </div>
         </section>
@@ -192,8 +192,8 @@
 
             </div>
             <div class="footer-icon">
-                <a href="https://www.facebook.com/" target="_blank"><img src="./assets/facebook.png"  alt=""></a> 
-                <a href=" https://github.com/" target="_blank"><img src="./assets/github.png" alt=""></a>
+                <a href="https://www.facebook.com/profile.php?id=100055676185129" target="_blank"><img src="./assets/facebook.png"  alt=""></a> 
+                <a href="https://github.com/MeghlaB" target="_blank"><img src="./assets/github.png" alt=""></a>
                 <a href="https://www.linkedin.com/" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
 
             </div>
