--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2 class="banner-text">"In the near future, I hope to become a Developer."</h2>
                 <p class="banner-description">Sometime in the near future I hope to become a developer,  I hope it continues <br> to grow and develop.
                 </p>
-                <button class="button-styles"><a href="#footer-section">Contact with Me</a></button>
+                <button class="button-styles"><a href="#footer-section">Contact With Me</a></button>
                 
         </div>
     </header>
